--- a/SEProject/pom.xml
+++ b/SEProject/pom.xml
@@ -14,6 +14,17 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>7.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SEProject</finalName>
