--- a/SE/src/main/webapp/WEB-INF/web.xml
+++ b/SE/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,11 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-
+  <dependency>
+    <groupId>com.paypal.sdk</groupId>
+    <artifactId>rest-api-sdk</artifactId>
+    <version>1.14.0</version>
+  </dependency>
 
 </web-app>
 
