--- a/SE/pom.xml
+++ b/SE/pom.xml
@@ -19,7 +19,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.paypal.sdk</groupId>
+      <artifactId>rest-api-sdk</artifactId>
+      <version>1.14.0</version>
+    </dependency>
   </dependencies>
 
 
